# svix-takehome

./: Cargo.toml  shell.nix
migrations/: 20240720213825_init.sql
src/: main.rs
