[package]
name = "svix-take-home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["sqlite", "chrono", "json", "runtime-tokio"] }
tokio = { version = "1.38.1", features = ["full"] }
